added blacklists for indexer

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -27,3 +27,4 @@ grid.assets.delete = true
 # URLs are normalized before a matching is attempted, that means they are encoded propery
 # and the fragment identifier is removed from the end of the URL.
 grid.crawler.blacklist = crawler_blacklist_someonewhocares.txt,crawler_blacklist_localhost.txt
+grid.indexer.blacklist = indexer_blacklist_filetypes.txt
