fixes for several priority queues

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -28,3 +28,4 @@ grid.assets.delete = true
 # and the fragment identifier is removed from the end of the URL.
 grid.crawler.blacklist = crawler_blacklist_someonewhocares.txt,crawler_blacklist_localhost.txt
 grid.indexer.blacklist = indexer_blacklist_filetypes.txt
+grid.indexer.priorityQueues = 2
