added new limit/throttling attributes

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,6 +1,8 @@
 port = 8300
 grid.mcp.address = 127.0.0.1:8100,node00:8100,yacygrid.com:8100
 grid.broker.lazy = true
+grid.broker.queue.limit = 0
+grid.broker.queue.throttling = 10000
 grid.assets.delete = true
 
 # The blacklist is choosen with the attribute grid.crawler.blacklist which gives the file name(s) of the blacklist(s) to be used.
