enhanced service host list

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,5 +1,5 @@
 port = 8300
-grid.mcp.address = 127.0.0.1:8100,node00:8100,yacygrid.com:8100
+grid.mcp.address = 127.0.0.1:8100,node00.local:8100,brain.local:8100,searchlab.eu:8100
 grid.broker.lazy = true
 grid.broker.queue.limit = 0
 grid.broker.queue.throttling = 10000
