using new properties from config in MCP

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -29,3 +29,7 @@ grid.assets.delete = true
 grid.crawler.blacklist = crawler_blacklist_someonewhocares.txt,crawler_blacklist_localhost.txt
 grid.indexer.blacklist = indexer_blacklist_filetypes.txt
 grid.indexer.priorityQueues = 2
+
+# properties that must be identical to those in the MCP
+grid.elasticsearch.indexName.crawlstart = crawlstart
+grid.elasticsearch.indexName.crawler = crawler
