using default index name settings

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -30,6 +30,28 @@ grid.crawler.blacklist = crawler_blacklist_someonewhocares.txt,crawler_blacklist
 grid.indexer.blacklist = indexer_blacklist_filetypes.txt
 grid.indexer.priorityQueues = 2
 
-# properties that must be identical to those in the MCP
+
+
+####################################################################
+## The following properties must be identical to those in the MCP ##
+####################################################################
+
+# the grid name is used to separate different grid networks.
+# Only networks with the same name connect with each other
+grid.name = freeworld
+
+# Index names of the grid indexes:
+# crawlstart : a history of all crawl starts 
+# crawler    : tracking of crawling progress
+# query      : a history of all queries
+# web        : the document search index ("web index", there)
 grid.elasticsearch.indexName.crawlstart = crawlstart
 grid.elasticsearch.indexName.crawler = crawler
+grid.elasticsearch.indexName.query = query
+grid.elasticsearch.indexName.web = web
+
+# the following type name is an intermediate solution to migrate from elastic 6.x to 8.x
+# unfortunately the current index type name is 'web' but in future elastic versions the name '_doc'
+# is mandatory. We will use this setting until migration to elastic 8.x is complete and delete
+# the configuration afterwards.
+grid.elasticsearch.typeName = web
