--- a/conf/config.properties
+++ b/conf/config.properties
@@ -36,7 +36,7 @@ grid.indexer.priorityQueues = 2
 ## The following properties must be identical to those in the MCP ##
 ####################################################################
 
-# the grid name is used to separate different grid networks.
+# The grid name is used to separate different grid networks.
 # Only networks with the same name connect with each other
 grid.name = freeworld
 
