--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+    }
+}
+
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+}
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'application'
@@ -11,13 +25,14 @@ sourceSets {
     }
 }
 
+archivesBaseName = 'yacy_grid_crawler'
 mainClassName = "net.yacy.grid.crawler.Crawler"
 applicationDefaultJvmArgs = ["-Xmx1024m"]
 
 group = 'net.yacy'
 version = '0.0.1-SNAPSHOT'
 
-description = "YaCy Grid Loader"
+description = "YaCy Grid Crawler"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -30,21 +45,36 @@ repositories {
      mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'net.yacy.grid.crawler.Crawler'
+    }
+}
+
+shadowJar {
+    mergeServiceFiles()
+
+    from('conf') {
+        into 'conf'
+    }
+}
+assemble.dependsOn shadowJar
+
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.+'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.15.+'
-    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.+'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.+'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.+'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.+'
-    compile group: 'org.mapdb', name: 'mapdb', version: '3.+'
+    compile group: 'com.hazelcast', name: 'hazelcast', version: '4.2.+'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.+'
     compile group: 'commons-net', name: 'commons-net', version: '3.+'
-    compile group: 'jcifs', name: 'jcifs', version: '1.+'
-    compile group: 'org.elasticsearch.client', name: 'transport', version: '6.8.+'
-    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.+'
-    compile group: 'com.hazelcast', name: 'hazelcast', version: '5.+'
     compile group: 'io.minio', name: 'minio', version: '8.3.+'
-    
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.+'
+    compile group: 'jcifs', name: 'jcifs', version: '1.+'
+    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.+'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.16.+'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.+'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.+'
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.+'
+    compile group: 'org.elasticsearch.client', name: 'transport', version: '6.8.+'
+    compile group: 'org.mapdb', name: 'mapdb', version: '3.+'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.+'
+
     compile group: 'io.netty', name: 'netty-all', version: '4.+'
 }
