--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     implementation 'com.hazelcast:hazelcast:4.2.+'
     implementation 'com.rabbitmq:amqp-client:5.14.+'
     implementation 'commons-net:commons-net:3.+'
-    implementation 'io.minio:minio:8.3.+'
     implementation 'javax.servlet:javax.servlet-api:4.+'
     implementation 'jcifs:jcifs:1.+'
     implementation 'org.apache.httpcomponents:httpmime:4.+'
@@ -62,6 +61,9 @@ dependencies {
     implementation 'org.mapdb:mapdb:3.+'
     implementation 'org.slf4j:log4j-over-slf4j:1.7.+'
     implementation 'org.slf4j:slf4j-jdk14:1.7.+'
+    implementation 'io.minio:minio:8.4.+'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.+'
+    implementation 'io.findify:s3mock_2.13:0.2.+'
     
     implementation 'io.netty:netty-all:4.+'
 }
