--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ repositories {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'net.yacy.grid.crawler.Crawler'
+        attributes 'Main-Class': mainClassName
     }
 }
 
@@ -57,13 +57,13 @@ dependencies {
     implementation 'org.eclipse.jetty:jetty-servlet:9.4.+'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:5.+'
     implementation 'org.elasticsearch.client:transport:6.8.+'
-    implementation 'org.mapdb:mapdb:3.+'
-    implementation 'org.slf4j:log4j-over-slf4j:1.7.+'
-    implementation 'org.slf4j:slf4j-jdk14:1.7.+'
-    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.17.+'
+    implementation 'org.mapdb:mapdb:3.0.+'
+    implementation 'org.slf4j:log4j-over-slf4j:2.0.+'
+    implementation 'org.slf4j:slf4j-jdk14:2.0.+'
+    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.+'
     implementation 'io.minio:minio:8.4.+'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.+'
     implementation 'io.findify:s3mock_2.13:0.2.+'
-    
-    implementation 'io.netty:netty-all:4.+'
+
+    implementation 'io.netty:netty-all:4.1.85.Final'
 }
